step 2. get top 5 nearby attractions